feat(back): add document endpoints to router
